--- a/package.json
+++ b/package.json
@@ -5,8 +5,19 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/react": "^1.0.6",
+        "@inertiajs/server": "^0.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
